--- a/configs/pipelines/chembl/target.yaml
+++ b/configs/pipelines/chembl/target.yaml
@@ -7,6 +7,13 @@ entity_name: target
 endpoint: /target
 primary_key: target_chembl_id
 
+sources:
+  chembl:
+    batch_size: 25
+    parameters:
+      base_url: "https://www.ebi.ac.uk/chembl/api/data"
+      max_url_length: 2000
+
 cli:
   input_file: data/input/target.csv
 
@@ -63,4 +70,3 @@ hashing:
   business_key_fields:
     - target_chembl_id
 # pagination наследуется из chembl_default profile
-
