--- a/configs/pipelines/chembl/testitem.yaml
+++ b/configs/pipelines/chembl/testitem.yaml
@@ -17,7 +17,8 @@ sources:
 
 cli:
   input_file: data/input/testitem.csv
-
+  input_full_dataset: false
+  
 fields:
   - name: molecule_chembl_id
     data_type: string
