--- a/configs/pipelines/chembl/target.yaml
+++ b/configs/pipelines/chembl/target.yaml
@@ -20,9 +20,11 @@ sources:
     base_url: "https://www.ebi.ac.uk/chembl/api/data"
     max_url_length: 2000
 
-cli:
-  input_file: data/input/target.csv
-  input_full_dataset: false
+input_mode: id_only
+input_path: data/input/target.csv
+csv_options:
+  delimiter: ","
+  header: true
 
 fields:
   - name: target_chembl_id
