Add circuit breaker controls to HTTP middleware

--- a/configs/profiles/chembl_default.yaml
+++ b/configs/profiles/chembl_default.yaml
@@ -17,6 +17,7 @@ client:
   rate_limit: 10  # запросов в секунду
   backoff_factor: 2.0
   circuit_breaker_threshold: 5
+  circuit_breaker_recovery_time: 60.0
 
 # Общие пути хранения
 storage:
